syntax = "proto3";
option go_package = "./publication_authorization;pb_publication_authorization";

service PublicationAuthorization {
  rpc IsAuthorizedPublisher(IsAuthorizedPublisherRequest) returns (Response);
}

message Response {
  bool is_authorized = 1;
}

message IsAuthorizedPublisherRequest {
  int32 publication_id = 1;
  int32 user_id = 2;
}